added the full structure but need to add some details in the style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolando by Hugo</title>
+
     <link rel="stylesheet" href="style.css" />
+
+    <script
+      src="https://kit.fontawesome.com/710259c6f3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <div class="wrapper">
+        <nav>
+          <a>Donna</a>
+          <a>Uomo</a>
+          <a>Bambini</a>
+        </nav>
+
+        <div class="logo"></div>
+
+        <div class="icons">
+          <i class="fa-regular fa-user"></i>
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-bag-shopping"></i>
+        </div>
+      </div>
+    </header>
 
     <div class="wrapper">
       <div class="card-container">
@@ -173,5 +195,28 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="wrapper">
+        <div>
+          <h3>Boolean</h3>
+          <h4>lorem</h4>
+          <h4>lorem</h4>
+          <h4>lorem</h4>
+        </div>
+
+        <div>
+          <h3>Trovaci anche su</h3>
+
+          <div>
+            <i class="fa-brands fa-twitter-square"></i>
+            <i class="fa-brands fa-instagram-square"></i>
+            <i class="fa-brands fa-facebook-square"></i>
+            <i class="fa-brands fa-pinterest-square"></i>
+            <i class="fa-brands fa-youtube-square"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
