added hover effect and some other styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
     <link rel="stylesheet" href="style.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800;900&family=Roboto:wght@100;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       src="https://kit.fontawesome.com/710259c6f3.js"
       crossorigin="anonymous"
@@ -41,11 +48,12 @@
             <!-- picture -->
             <div class="card__picture-1">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
                 <h3>-50%</h3>
+                <h3 class="b-green">Sostenibilità</h3>
               </div>
             </div>
 
@@ -67,7 +75,7 @@
             <!-- picture -->
             <div class="card__picture-2">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
@@ -93,7 +101,7 @@
             <!-- picture -->
             <div class="card__picture-3">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
@@ -120,7 +128,7 @@
             <!-- picture -->
             <div class="card__picture-4">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
@@ -146,7 +154,7 @@
             <!-- picture -->
             <div class="card__picture-5">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
@@ -172,7 +180,7 @@
             <!-- picture -->
             <div class="card__picture-6">
               <div class="like">
-                <img src="images/img/heart.svg" />
+                <i class="fa-solid fa-heart"></i>
               </div>
 
               <div class="badge">
