--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -85,8 +85,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -111,8 +111,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -138,8 +138,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -164,8 +164,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -190,8 +190,8 @@
 
             <!-- text -->
             <div class="card__description">
-              <h3>levis</h3>
-              <h3>This is a fake brand</h3>
+              <h3>Brand's name</h3>
+              <h2>Name of the product</h2>
 
               <div class="price">
                 <h5>14.99</h5>
@@ -207,7 +207,7 @@
     <footer>
       <div class="wrapper">
         <div>
-          <h3>Boolean</h3>
+          <h3>Booleando inc.</h3>
           <h4>lorem</h4>
           <h4>lorem</h4>
           <h4>lorem</h4>
