added fixed header and some fix in the style

--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
       <div class="wrapper">
         <div>
           <h3>Booleando inc.</h3>
-          <h4>lorem</h4>
-          <h4>lorem</h4>
-          <h4>lorem</h4>
+          <h4>Informazioni legali</h4>
+          <h4>Altre informazioni</h4>
+          <h4>Tutti i diritti riservati</h4>
         </div>
 
         <div>
